--- a/Toxic Comment Classification.ipynb
+++ b/Toxic Comment Classification.ipynb
@@ -2,13 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "id": "d3e4656b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     C:\\Users\\allwi\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Unzipping corpora\\stopwords.zip.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
-    "from nltk.tokenize import word_tokenize"
+    "import nltk\n",
+    "from nltk.tokenize import word_tokenize\n",
+    "from nltk.corpus import stopwords\n",
+    "nltk.download('stopwords')\n"
    ]
   },
   {
@@ -21,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "735a9b29",
    "metadata": {},
    "outputs": [
@@ -57,7 +80,7 @@
        "[159571 rows x 7 columns]>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,6 +105,49 @@
   },
   {
    "cell_type": "markdown",
+   "id": "491dc799",
+   "metadata": {},
+   "source": [
+    "### Lower Casing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "2e3632ab",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0         explanation\\nwhy the edits made under my usern...\n",
+       "1         d'aww! he matches this background colour i'm s...\n",
+       "2         hey man, i'm really not trying to edit war. it...\n",
+       "3         \"\\nmore\\ni can't make any real suggestions on ...\n",
+       "4         you, sir, are my hero. any chance you remember...\n",
+       "                                ...                        \n",
+       "159566    \":::::and for the second time of asking, when ...\n",
+       "159567    you should be ashamed of yourself \\n\\nthat is ...\n",
+       "159568    spitzer \\n\\numm, theres no actual article for ...\n",
+       "159569    and it looks like it was actually you who put ...\n",
+       "159570    \"\\nand ... i really don't think you understand...\n",
+       "Name: comment_text, Length: 159571, dtype: object"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train = df['comment_text'].str.lower()\n",
+    "X_train"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4d5eeefd",
    "metadata": {},
    "source": [
@@ -90,48 +156,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "id": "1399cbde",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0         [Explanation, Why, the, edits, made, under, my...\n",
-       "1         [D'aww, !, He, matches, this, background, colo...\n",
-       "2         [Hey, man, ,, I, 'm, really, not, trying, to, ...\n",
-       "3         [``, More, I, ca, n't, make, any, real, sugges...\n",
-       "4         [You, ,, sir, ,, are, my, hero, ., Any, chance...\n",
+       "<bound method NDFrame.head of 0         [explanation, why, the, edits, made, under, my...\n",
+       "1         [d'aww, !, he, matches, this, background, colo...\n",
+       "2         [hey, man, ,, i, 'm, really, not, trying, to, ...\n",
+       "3         [``, more, i, ca, n't, make, any, real, sugges...\n",
+       "4         [you, ,, sir, ,, are, my, hero, ., any, chance...\n",
        "                                ...                        \n",
-       "159566    [``, :, :, :, :, :, And, for, the, second, tim...\n",
-       "159567    [You, should, be, ashamed, of, yourself, That,...\n",
-       "159568    [Spitzer, Umm, ,, theres, no, actual, article,...\n",
-       "159569    [And, it, looks, like, it, was, actually, you,...\n",
-       "159570    [``, And, ..., I, really, do, n't, think, you,...\n",
-       "Name: comment_text, Length: 159571, dtype: object"
+       "159566    [``, :, :, :, :, :, and, for, the, second, tim...\n",
+       "159567    [you, should, be, ashamed, of, yourself, that,...\n",
+       "159568    [spitzer, umm, ,, theres, no, actual, article,...\n",
+       "159569    [and, it, looks, like, it, was, actually, you,...\n",
+       "159570    [``, and, ..., i, really, do, n't, think, you,...\n",
+       "Name: comment_text, Length: 159571, dtype: object>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df['comment_text'].apply(word_tokenize)"
+    "X_train = X_train.apply(word_tokenize)\n",
+    "X_train.head"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e5a67e5c",
+   "id": "6c929a92",
    "metadata": {},
    "source": [
-    "### Lower Casing"
+    "### stop word filtering"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "1d3afbcc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['i', 'me', 'my', 'myself', 'we', 'our', 'ours', 'ourselves', 'you', \"you're\", \"you've\", \"you'll\", \"you'd\", 'your', 'yours', 'yourself', 'yourselves', 'he', 'him', 'his', 'himself', 'she', \"she's\", 'her', 'hers', 'herself', 'it', \"it's\", 'its', 'itself', 'they', 'them', 'their', 'theirs', 'themselves', 'what', 'which', 'who', 'whom', 'this', 'that', \"that'll\", 'these', 'those', 'am', 'is', 'are', 'was', 'were', 'be', 'been', 'being', 'have', 'has', 'had', 'having', 'do', 'does', 'did', 'doing', 'a', 'an', 'the', 'and', 'but', 'if', 'or', 'because', 'as', 'until', 'while', 'of', 'at', 'by', 'for', 'with', 'about', 'against', 'between', 'into', 'through', 'during', 'before', 'after', 'above', 'below', 'to', 'from', 'up', 'down', 'in', 'out', 'on', 'off', 'over', 'under', 'again', 'further', 'then', 'once', 'here', 'there', 'when', 'where', 'why', 'how', 'all', 'any', 'both', 'each', 'few', 'more', 'most', 'other', 'some', 'such', 'no', 'nor', 'not', 'only', 'own', 'same', 'so', 'than', 'too', 'very', 's', 't', 'can', 'will', 'just', 'don', \"don't\", 'should', \"should've\", 'now', 'd', 'll', 'm', 'o', 're', 've', 'y', 'ain', 'aren', \"aren't\", 'couldn', \"couldn't\", 'didn', \"didn't\", 'doesn', \"doesn't\", 'hadn', \"hadn't\", 'hasn', \"hasn't\", 'haven', \"haven't\", 'isn', \"isn't\", 'ma', 'mightn', \"mightn't\", 'mustn', \"mustn't\", 'needn', \"needn't\", 'shan', \"shan't\", 'shouldn', \"shouldn't\", 'wasn', \"wasn't\", 'weren', \"weren't\", 'won', \"won't\", 'wouldn', \"wouldn't\"]\n"
+     ]
+    }
+   ],
+   "source": [
+    "stop_words = stopwords.words('english')\n",
+    "print(stop_words)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86c049c2",
+   "id": "a8253228",
    "metadata": {},
    "outputs": [],
    "source": []
