--- a/Toxic Comment Classification.ipynb
+++ b/Toxic Comment Classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "id": "d3e4656b",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
      "text": [
       "[nltk_data] Downloading package stopwords to\n",
       "[nltk_data]     C:\\Users\\allwi\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Unzipping corpora\\stopwords.zip.\n"
+      "[nltk_data]   Package stopwords is already up-to-date!\n"
      ]
     },
     {
@@ -21,7 +21,7 @@
        "True"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "735a9b29",
    "metadata": {},
    "outputs": [
@@ -80,7 +80,7 @@
        "[159571 rows x 7 columns]>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "id": "2e3632ab",
    "metadata": {
     "scrolled": true
@@ -136,7 +136,7 @@
        "Name: comment_text, Length: 159571, dtype: object"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,44 +148,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d5eeefd",
+   "id": "c59dbec1",
    "metadata": {},
    "source": [
-    "### Tokenizing"
+    "### correcting words\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "1399cbde",
+   "execution_count": null,
+   "id": "6005b92d",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<bound method NDFrame.head of 0         [explanation, why, the, edits, made, under, my...\n",
-       "1         [d'aww, !, he, matches, this, background, colo...\n",
-       "2         [hey, man, ,, i, 'm, really, not, trying, to, ...\n",
-       "3         [``, more, i, ca, n't, make, any, real, sugges...\n",
-       "4         [you, ,, sir, ,, are, my, hero, ., any, chance...\n",
-       "                                ...                        \n",
-       "159566    [``, :, :, :, :, :, and, for, the, second, tim...\n",
-       "159567    [you, should, be, ashamed, of, yourself, that,...\n",
-       "159568    [spitzer, umm, ,, theres, no, actual, article,...\n",
-       "159569    [and, it, looks, like, it, was, actually, you,...\n",
-       "159570    [``, and, ..., i, really, do, n't, think, you,...\n",
-       "Name: comment_text, Length: 159571, dtype: object>"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X_train = X_train.apply(word_tokenize)\n",
-    "X_train.head"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -197,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "id": "1d3afbcc",
    "metadata": {},
    "outputs": [
@@ -216,8 +191,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "a8253228",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0         explanation edits made username hardcore metal...\n",
+       "1         d'aww! matches background colour i'm seemingly...\n",
+       "2         hey man, i'm really trying edit war. guy const...\n",
+       "3         \" can't make real suggestions improvement - wo...\n",
+       "4           you, sir, hero. chance remember page that's on?\n",
+       "                                ...                        \n",
+       "159566    \":::::and second time asking, view completely ...\n",
+       "159567    ashamed horrible thing put talk page. 128.61.1...\n",
+       "159568    spitzer umm, theres actual article prostitutio...\n",
+       "159569    looks like actually put speedy first version d...\n",
+       "159570    \" ... really think understand. came idea bad r...\n",
+       "Name: comment_text, Length: 159571, dtype: object"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train= X_train.apply(lambda x: ' '.join([word for word in x.split() if word not in (stop_words)]))\n",
+    "X_train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bffc394e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1047d255",
    "metadata": {},
    "outputs": [],
    "source": []
