Update Toxic Comment Classification.ipynb

--- a/Toxic Comment Classification.ipynb
+++ b/Toxic Comment Classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "id": "d3e4656b",
    "metadata": {},
    "outputs": [
@@ -21,7 +21,7 @@
        "True"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -31,7 +31,11 @@
     "import nltk\n",
     "from nltk.tokenize import word_tokenize\n",
     "from nltk.corpus import stopwords\n",
-    "nltk.download('stopwords')\n"
+    "from textblob import TextBlob\n",
+    "import string\n",
+    "\n",
+    "\n",
+    "nltk.download('stopwords')"
    ]
   },
   {
@@ -113,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 52,
    "id": "2e3632ab",
    "metadata": {
     "scrolled": true
@@ -136,7 +140,7 @@
        "Name: comment_text, Length: 159571, dtype: object"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,23 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c59dbec1",
-   "metadata": {},
-   "source": [
-    "### correcting words\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6005b92d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6c929a92",
+   "id": "7a34ecb2",
    "metadata": {},
    "source": [
     "### stop word filtering"
@@ -172,8 +160,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "1d3afbcc",
+   "execution_count": 53,
+   "id": "5f64e415",
    "metadata": {},
    "outputs": [
     {
@@ -191,8 +179,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "a8253228",
+   "execution_count": 54,
+   "id": "33d36577",
    "metadata": {},
    "outputs": [
     {
@@ -212,13 +200,116 @@
        "Name: comment_text, Length: 159571, dtype: object"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "X_train= X_train.apply(lambda x: ' '.join([word for word in x.split() if word not in (stop_words)]))\n",
+    "X_train"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e1a3d0d5",
+   "metadata": {},
+   "source": [
+    "### remove special characters and punctuations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "64a19be2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# def removeNonAscii(string):\n",
+    "#     return re.sub('\\W+',' ', string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "c65cf21d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0         explanation why the edits made under my userna...\n",
+       "1         d aww he matches this background colour i m se...\n",
+       "2         hey man i m really not trying to edit war it s...\n",
+       "3          more i can t make any real suggestions on imp...\n",
+       "4         you sir are my hero any chance you remember wh...\n",
+       "                                ...                        \n",
+       "159566     and for the second time of asking when your v...\n",
+       "159567    you should be ashamed of yourself that is a ho...\n",
+       "159568    spitzer umm theres no actual article for prost...\n",
+       "159569    and it looks like it was actually you who put ...\n",
+       "159570     and i really don t think you understand i cam...\n",
+       "Name: comment_text, Length: 159571, dtype: object"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# X_train= X_train.apply(lambda x: removeNonAscii(x))\n",
+    "# X_train"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c59dbec1",
+   "metadata": {},
+   "source": [
+    "### correcting words\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "6005b92d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Natural language is a central part of our day to day life, and it's so interesting to work on any problem related to languages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = \"Naturaal language is a cantral part of our day to day life, and it's so antresting to work on any problem related to langages.\"\n",
+    " \n",
+    "output = TextBlob(data).correct()\n",
+    "print(output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "8dedf252",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def correctwords(string): \n",
+    "    return(TextBlob(string).correct())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7af1516c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train= X_train.apply(lambda x: correctwords(x))\n",
     "X_train"
    ]
   },
