--- a/Toxic Comment Classification.ipynb
+++ b/Toxic Comment Classification.ipynb
@@ -233,7 +233,9 @@
    "cell_type": "code",
    "execution_count": 49,
    "id": "c65cf21d",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -261,65 +263,6 @@
     "# X_train= X_train.apply(lambda x: removeNonAscii(x))\n",
     "# X_train"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c59dbec1",
-   "metadata": {},
-   "source": [
-    "### correcting words\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "6005b92d",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Natural language is a central part of our day to day life, and it's so interesting to work on any problem related to languages.\n"
-     ]
-    }
-   ],
-   "source": [
-    "data = \"Naturaal language is a cantral part of our day to day life, and it's so antresting to work on any problem related to langages.\"\n",
-    " \n",
-    "output = TextBlob(data).correct()\n",
-    "print(output)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "id": "8dedf252",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def correctwords(string): \n",
-    "    return(TextBlob(string).correct())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7af1516c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X_train= X_train.apply(lambda x: correctwords(x))\n",
-    "X_train"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bffc394e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
