--- a/Trial.ipynb
+++ b/Trial.ipynb
@@ -147,6 +147,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "15aa5ab3",
+   "metadata": {},
+   "source": [
+    "add preprocessing here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3cb18c5c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "id": "11d53da3",
